# foodgram-project

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: admin.py  fields.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_recipeingredientsdetails_recipe.py  0002_initial.py  0003_auto_20210713_1527.py  0003_auto_20210715_1651.py  0004_auto_20210716_1335.py  0004_auto_20210812_1039.py  0004_recipe_pub_date.py  0005_alter_recipefavourite_unique_together.py  0005_auto_20210719_1249.py
backend/api/templates/: shopping_cart.html
backend/foodgram/: settings.py  urls.py
backend/scripts/: utils.py
backend/static/css/: main.css
backend/static/js/: buttons.js  pagination.js  recipe-create.js  tags-colors.js  tags-filter.js
backend/tests/: data.py  test_01_users.py  test_02_tags.py  test_03_recipes.py
backend/tests/backend/: Dockerfile  pyproject.toml  setup.cfg
backend/users/: admin.py  models.py  urls.py
backend/users/migrations/: 0001_initial.py  0002_auto_20210709_1804.py  0002_auto_20210712_1133.py
backend/website/: 500.html  forms.py  urls.py  views.py
backend/website/templates/: 400.html  403.html  404.html  about.html  author.html  base.html  footer.html  header.html  index.html  message.html  paginator.html  recipe-author.html  recipe-btn-add-to-favorites.html  recipe-btn-add-to-shooping-cart.html  recipe-btn-follow-author.html  recipe-create.html  recipe-list.html  recipe-single.html  recipe-tags-list.html  signup.html  (+5 more)
(+36 files in other folders)
