[tool.poetry]
name = "foodgram"
version = "0.1.0"
description = "Сервис для публикации рецептов."
authors = ["captainKoala <konstantin.paulkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
djoser = "^2.1.0"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
