[tool.poetry]
name = "foodgram"
version = "0.1.0"
description = "Сервис для публикации рецептов."
authors = ["captainKoala <konstantin.paulkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
djoser = "^2.1.0"
Pillow = "^8.3.1"
drf-extra-fields = "^3.1.1"
django-cleanup = "^5.2.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
django-colorfield = "^0.4.2"
reportlab = "^3.5.68"
django-wkhtmltopdf = "^3.3.0"
django-filter = "^2.4.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
